// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When suite exists Sanity - making sure everything works as it should 1`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "1",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "3",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "4",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "2": true,
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 2`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "15",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "16",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "18",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "19",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "0": true,
    "1": true,
    "10": true,
    "11": true,
    "12": true,
    "13": true,
    "14": true,
    "17": true,
    "2": true,
    "3": true,
    "4": true,
    "5": true,
    "6": true,
    "7": true,
    "8": true,
    "9": true,
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 3`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "30",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "31",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "33",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "34",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "0": true,
    "1": true,
    "10": true,
    "11": true,
    "12": true,
    "13": true,
    "14": true,
    "15": true,
    "16": true,
    "17": true,
    "18": true,
    "19": true,
    "2": true,
    "20": true,
    "21": true,
    "22": true,
    "23": true,
    "24": true,
    "25": true,
    "26": true,
    "27": true,
    "28": true,
    "29": true,
    "3": true,
    "32": true,
    "4": true,
    "5": true,
    "6": true,
    "7": true,
    "8": true,
    "9": true,
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 4`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_id": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "45",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "46",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "name": "suite_id",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "48",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "49",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_id",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_id",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_id",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "0": true,
    "1": true,
    "10": true,
    "11": true,
    "12": true,
    "13": true,
    "14": true,
    "15": true,
    "16": true,
    "17": true,
    "18": true,
    "19": true,
    "2": true,
    "20": true,
    "21": true,
    "22": true,
    "23": true,
    "24": true,
    "25": true,
    "26": true,
    "27": true,
    "28": true,
    "29": true,
    "3": true,
    "30": true,
    "31": true,
    "32": true,
    "33": true,
    "34": true,
    "35": true,
    "36": true,
    "37": true,
    "38": true,
    "39": true,
    "4": true,
    "40": true,
    "41": true,
    "42": true,
    "43": true,
    "44": true,
    "47": true,
    "5": true,
    "6": true,
    "7": true,
    "8": true,
    "9": true,
  },
}
`;
